--- a/Client/BlazorApp1/Components/_Imports.razor
+++ b/Client/BlazorApp1/Components/_Imports.razor
@@ -6,5 +6,8 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using BlazorApp
-@using BlazorApp.Components
+@using BlazorApp1
+@using BlazorApp1.Components
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Authorization
+    
