--- a/Client/BlazorApp1/Components/Pages/Home.razor
+++ b/Client/BlazorApp1/Components/Pages/Home.razor
@@ -14,4 +14,4 @@
     </NotAuthorized>
 </AuthorizeView>
 Here you can browse interesting posts.
-<button onclick=' () => navMgr.NavigateTo("/login")'>go to login</button>
+<button @onclick=' () => navMgr.NavigateTo("/login")'>go to login </button>
