login/register css

--- a/Client/BlazorApp1/Components/Auth/Login.razor
+++ b/Client/BlazorApp1/Components/Auth/Login.razor
@@ -33,7 +33,7 @@
         try
         {
             await ((SimpleAuthProvider)AuthProvider).Login(username, password);
-            navMgr.NavigateTo("/");
+            navMgr.NavigateTo("/home");
         }
         catch (Exception ex)
         {
