--- a/Client/BlazorApp1/Components/Pages/ViewPosts.razor
+++ b/Client/BlazorApp1/Components/Pages/ViewPosts.razor
@@ -4,6 +4,8 @@
 @inject IPostService postService
 @inject IUserService userService
 
+@attribute [Authorize]
+
 <link rel="stylesheet" href="css/viewPosts.css" />
 
 <h3>View Posts</h3>
