--- a/Client/BlazorApp1/Components/Pages/CreatePost.razor
+++ b/Client/BlazorApp1/Components/Pages/CreatePost.razor
@@ -5,6 +5,8 @@
 @inject NavigationManager navMgr
 @inject AuthenticationStateProvider AuthProvider
 
+@attribute [Authorize]
+
 <h3>Create Post</h3>
 
 <EditForm Model="newPost" OnValidSubmit="HandleValidSubmit">
